auth-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: auth-service
    tier: frontend
  name: auth-service-app
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: auth-service
    tier: frontend
  type: NodePort
status:
  loadBalancer: {}
