data-manager-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: data-manager
    tier: backend
  name: data-manager-app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: data-manager
    tier: backend
  type: NodePort
status:
  loadBalancer: {}
