ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assigment-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: auth-service-app
            port:
              number: 5001
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service-app
            port:
              number: 5001
      - path: /check_login
        pathType: Prefix
        backend:
          service:
            name: auth-service-app
            port:
              number: 5001
      - path: /applications
        pathType: Prefix
        backend:
          service:
            name: data-manager-app
            port:
              number: 5000
      - path: /application/*
        pathType: Prefix
        backend:
          service:
            name: data-manager-app
            port:
              number: 5000
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: data-manager-app
            port:
              number: 5000
